<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ChooseProfil">


    <Button
        android:id="@+id/btnDonater"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@color/btnDonater"
        android:text="@string/Donater"
        android:textColor="@color/background_white"
        android:typeface="serif"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnAnnoncer"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_alignStart="@+id/btnDonater"
        android:layout_centerVertical="true"
        android:text="@string/Annoncer"
        android:background="@color/btnAnnoncer"
        android:textColor="@color/background_white"
        android:typeface="serif"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnTronsporter"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_alignStart="@+id/btnAnnoncer"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="72dp"
        android:text="@string/TransporterVolunteer"
        android:background="@color/btnTronsporter"
        android:textColor="@color/background_white"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="22dp"/>
</RelativeLayout>